[package]
name = "brlapi-server"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "0.15.0"
brlapi-types = { version = "0.1.0", path = "../brlapi-types" }
louis = { git = "https://github.com/emassey0135/liblouis-rust", version = "0.6.2" }
ndarray = "0.16.1"
tokio = { version = "1.46.1", features = ["full"] }
iconv-native = { version = "0.1.0", optional = true }
iconv-native-libiconv = { package = "iconv-native", version = "0.1.0", default-features = false, features = ["libiconv"], optional = true }

[features]
default = ["platform_iconv"]
platform_iconv = ["iconv-native"]
libiconv = ["iconv-native-libiconv"]
